--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "UUID for CRDT style op sequences",
   "main": "opid.js",
   "scripts": {
-    "test": "mocha"
+    "test": "./node_modules/.bin/mocha"
   },
   "repository": {
     "type": "git",
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/Reposoft/opid",
   "dependencies": {
     "uuid": "^2.0.1"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3"
   }
 }
