--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/Reposoft/opid",
   "dependencies": {
-    "uuid": "^2.0.1"
+    "node-uuid": "^1.4.3"
   },
   "devDependencies": {
     "mocha": "^2.3.3"
